kubernetes/collab-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collab-service
  template:
    metadata:
      labels:
        app: collab-service
    spec:
      containers:
        - image: asia-southeast1-docker.pkg.dev/tokyo-crossbar-440806-u9/peerprep/collab-service:latest
          name: collab-service
          ports:
            - containerPort: 3003
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
