kubernetes/kafka-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-container
  template:
    metadata:
      labels:
        app: kafka-container
    spec:
      containers:
        - env:
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka:9092
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_LISTENERS
              value: PLAINTEXT://0.0.0.0:9092
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
          image: confluentinc/cp-kafka:7.7.1
          livenessProbe:
            exec:
              command:
                - nc
                - -z
                - localhost
                - "9092"
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 5
          name: kafka-container
          ports:
            - containerPort: 9092
              protocol: TCP
      restartPolicy: Always
