kubernetes/collab-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab-service
spec:
  type: ClusterIP
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
  selector:
    app: collab-service
