kubernetes/kafka-container-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-container
spec:
  type: ClusterIP
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    app: kafka-container
