kubernetes/matching-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-service
spec:
  type: ClusterIP
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    app: matching-service
