kubernetes/question-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question
spec:
  type: ClusterIP
  ports:
    - name: "2000"
      port: 2000
      targetPort: 2000
  selector:
    app: question
