kubernetes/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  type: ClusterIP
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
