kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "peerprep"
spec:
  ingressClassName: "gce"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 3001
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 3001
      - path: /email
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 3001
      - path: /users/history
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 3001
      - path: /questions
        pathType: Prefix
        backend:
          service:
            name: question
            port:
              number: 2000
      - path: /matching
        pathType: Prefix
        backend:
          service:
            name: matching-service
            port:
              number: 3002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: collab-service
            port:
              number: 3003
